--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,23 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 body {
-    background: cadetblue;
+	background: cadetblue;
 }
 
 #picture {
-    width: 1000px;
-    height: 400px;
-    border: 2px solid #000;
+	width: 1000px;
+	height: 400px;
+	border: 8px solid orange;
 }
 
 #wrapper {
-    max-width: 800px;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    padding: 40px;
-
-
+	max-width: 1000px;
+	display: flex;
+	justify-content: center;
+	margin: 0 auto;
+	padding: 40px;
 }
